fix card spacing

--- a/blocks/people/__card/people__card.css
+++ b/blocks/people/__card/people__card.css
@@ -8,5 +8,4 @@
   ), url(../../../images/nick-kent.jpg);
   position: relative;
   border-radius: 30.5569px;
-  margin-left: 114px;
 }
