--- a/blocks/people/__logo/people__logo.css
+++ b/blocks/people/__logo/people__logo.css
@@ -1,4 +1,5 @@
 .people__logo {
   display: flex;
   flex-direction: column;
+  padding-right: 105px;
 }
